# execution

./: Cargo.toml  README.md
.github/: copyright.sh
.github/workflows/: ci.yml
.tickets/: et-0123.md  et-05c3.md  et-090a.md  et-0c7c.md  et-13ea.md  et-21ce.md  et-2442.md  et-24fc.md  et-2df6.md  et-2ef3.md  et-3510.md  et-469c.md  et-49cf.md  et-4d1d.md  et-6da3.md  et-6e83.md  et-71ae.md  et-7452.md  et-7637.md  et-766c.md  et-881c.md  et-8a8d.md  et-8ab0.md  et-8de9.md  et-991c.md  et-9e42.md  et-a842.md  et-a937.md  et-aa08.md  et-b107.md  et-bc6c.md  et-bfe0.md  et-db69.md  et-de56.md  et-e5a1.md  et-e5bb.md  et-eaf4.md  et-ecaf.md  et-f999.md  et-fa1d.md  (+2 more)
docs/: overview.md  v1_spec.md
execution_graph/: CHANGELOG.md  Cargo.toml  README.md
execution_graph/src/: access.rs  dirty.rs  dispatch.rs  graph.rs  lib.rs  plan.rs  pretty.rs  report.rs  tape_access.rs
execution_graph_examples/: Cargo.toml
execution_graph_wind_tunnel/: Cargo.toml
execution_graph_wind_tunnel/benches/: graph.rs
execution_graph_wind_tunnel/src/: main.rs
execution_tape/: CHANGELOG.md  Cargo.toml  README.md  opcodes.json
execution_tape/examples/: disasm.rs
execution_tape/src/: aggregates.rs  arena.rs  asm.rs  bytecode.rs  disasm.rs  format.rs  host.rs  lib.rs  opcodes_gen.rs  program.rs  reg_value.rs  trace.rs  typed.rs  value.rs  verifier.rs  vm.rs
execution_tape/src/analysis/: dataflow.rs  liveness.rs
execution_tape/src/format/: leb128.rs
execution_tape_codegen/src/: main.rs
execution_tape_conformance/: Cargo.toml  README.md
execution_tape_conformance/tests/: conformance.rs
execution_tape_profiling/: Cargo.toml  README.md
execution_tape_profiling/examples/: tracy_simple.rs
execution_tape_profiling/src/: lib.rs  resolver.rs  sink.rs
execution_tape_profiling/tests/: trace_stream.rs
execution_tape_wind_tunnel/: Cargo.toml
execution_tape_wind_tunnel/benches/: vm.rs
execution_tape_wind_tunnel/src/: main.rs
