[package]
name = "execution_tape"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Portable, verifiable register VM bytecode format and runtime (draft)."
readme = "README.md"
repository = "https://github.com/forest-rs/execution"
keywords = ["vm", "bytecode", "no_std", "serialization"]
categories = ["no-std", "virtualization"]

[features]
default = []
std = []

[dependencies]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
